--- a/Frontend/RoadmapAI/package.json
+++ b/Frontend/RoadmapAI/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.3.3",
     "bootstrap-vue": "^2.23.1",
     "bootstrap-vue-3": "^0.5.1",
+    "bootstrap-vue-next": "^0.26.8",
     "swiper": "^11.1.14",
     "vue": "^3.5.12",
     "vue-router": "^4.4.5"
